paul-changes: resized images

--- a/src/index.html
+++ b/src/index.html
@@ -233,7 +233,7 @@
 						</div>
 
 						<div class="col-sm-4 g-text-color-2 g-theme-bg-color-1">
-							<div class="arrow-section-img"><img class="full-width" src="Case/assets/img/meeting.jpg" alt=""></div>
+							<div class="arrow-section-img"><img class="full-width" src="Case/assets/img/meeting-min.jpg" alt=""></div>
 							<div class="arrow-section-block arrow-top text-center equal-height-column">
 								<div class="center-font g-heading-v9 text-center">
 									<h3 class="text-uppercase"><strong>Clients that care</strong></h3>
@@ -640,7 +640,7 @@
 								<li class="item">
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/2017-summer-internship.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/2017-summer-internship-min.jpg" alt="">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/G1P76LwSpCGRwUqb6" target="_blank">2017 Summer Internship</a></strong></h5>
@@ -655,7 +655,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/2017bptw.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/2017bptw-min.jpg" alt="">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/6YXNHMP7mbY6MJid9" target="_blank">2017 Best Places to Work</a></strong></h5>
@@ -672,7 +672,7 @@
 								<li class="item">
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/game-night.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/game-night-min.jpg" alt="">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://photos.app.goo.gl/xsfrqKKkmplU1D133" target="_blank">Game Nights</a></strong></h5>
@@ -686,7 +686,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/2017serverless.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/2017serverless-min.jpg" alt="">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/4T3HKxNofJPSDrqt8" target="_blank">2017 Serverless Conf</a></strong></h5>
@@ -703,7 +703,7 @@
 								<li class="item">
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/case-holiday-party.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/case-holiday-party-min.jpg" alt="">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/BvT9SvVD4zVXMSw5A" target="_blank">2016 Holiday Party</a></strong></h5>
@@ -719,7 +719,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/case-family-picnic.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/case-family-picnic-min.jpg" alt="">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/XvmL1Vp7FEAdjzYL6" target="_blank">2016 Family Picnic</a></strong></h5>
@@ -738,7 +738,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/AWS-trip.jpeg" alt="">
+											<img class="img-responsive" src="Case/assets/img/AWS-trip-min.jpeg" alt="">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/vfdM1cf6bihNDoNcA" target="_blank">re:Invent 2016</a></strong></h5>
@@ -753,7 +753,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/rogue_one.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/rogue_one-min.jpg" alt="">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/qNT8KHuR7HTLq3tK6" target="_blank">Rogue One: A Star Wars Movie</a></strong></h5>
@@ -770,7 +770,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/2015-holiday-party.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/2015-holiday-party-min.jpg" alt="">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/AE3Jadpp3fcPvF4o9" target="_blank">2015 Holiday Party</a></strong></h5>
@@ -785,7 +785,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/starwars-trip.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/starwars-trip-min.jpg" alt="">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/fkL6C2WmdvT9mFpg9" target="_blank">Star Wars: The Force Awakens</a></strong></h5>
