paul-changes: added api key for google maps

--- a/src/index.html
+++ b/src/index.html
@@ -841,7 +841,7 @@
 		<script src="assets/plugins/smoothScroll.js"></script>
 		<script src="assets/plugins/jquery.easing.min.js"></script>
 		<script src="assets/plugins/owl-carousel2/owl.carousel.min.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap" async defer></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAf66JJmp2VOldGTrVNOmMumlB5U6sVBSI&callback=initMap" async defer></script>
 		<script src="Case/assets/js/plugins/gmaps-ini.js"></script>
 		<script src="assets/plugins/master-slider/masterslider/masterslider.min.js"></script>
 		<script src="assets/plugins/revolution-slider/revolution/js/jquery.themepunch.tools.min.js"></script>
