paul-changes: reduced image sizes

--- a/src/index.html
+++ b/src/index.html
@@ -738,7 +738,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/AWS-trip-min.jpeg" alt="">
+											<img class="img-responsive" src="Case/assets/img/aws-trip-min.jpg" alt="">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/vfdM1cf6bihNDoNcA" target="_blank">re:Invent 2016</a></strong></h5>
