--- a/src/index.html
+++ b/src/index.html
@@ -637,7 +637,37 @@
 								<li class="item">
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/2017-summer-internship-min.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/2017picnic_min.jpg" alt="company picnic">
+											<div class="caption text-area-background g-va-middle g-padding-25">
+												<div class="">
+													<h5 class="text-uppercase"><strong><a href="https://photos.app.goo.gl/8RefFAJ1i7EY6yqT2" target="_blank" rel="noopener">2017 Family Picnic</a></strong></h5>
+													<p>
+														We always have a good time getting together with each other and our families. This year we had ponies, a bounce house, face painting, and a whole lot of fun! Thanks to everyone for coming out!
+													</p>
+												</div>
+											</div>
+										</div>
+									</div>
+									<!-- item -->
+									<div class="col-sm-6">
+										<div class="caption-outer">
+											<img class="img-responsive" src="Case/assets/img/2017csrc_min.jpg" alt="recruiting event">
+											<div class="caption text-area-background g-va-middle g-padding-25">
+												<div class="">
+													<h5 class="text-uppercase"><strong><a href="https://photos.app.goo.gl/mckEE6nkiRxVkaGh1" target="_blank" rel="noopener">Recruiting @ VT CSRC Career Fair</a></strong></h5>
+													<p>
+														Several employees attended the Virginia Tech Computer Science Resources Consortium Career Fair in search of another group of interns for the Summer of 2018!
+													</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+								<!-- item -->
+								<li class="item">
+									<div class="col-sm-6">
+										<div class="caption-outer">
+											<img class="img-responsive" src="Case/assets/img/2017-summer-internship-min.jpg" alt="internship">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/G1P76LwSpCGRwUqb6" target="_blank" rel="noopener">2017 Summer Internship</a></strong></h5>
@@ -652,7 +682,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/2017bptw-min.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/2017bptw-min.jpg" alt="best places to work event">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/6YXNHMP7mbY6MJid9" target="_blank" rel="noopener">2017 Best Places to Work</a></strong></h5>
@@ -669,7 +699,7 @@
 								<li class="item">
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/game-night-min.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/game-night-min.jpg" alt="game night">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://photos.app.goo.gl/xsfrqKKkmplU1D133" target="_blank" rel="noopener">Game Nights</a></strong></h5>
@@ -683,7 +713,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/2017serverless-min.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/2017serverless-min.jpg" alt="serverless conference">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/4T3HKxNofJPSDrqt8" target="_blank" rel="noopener">2017 Serverless Conf</a></strong></h5>
@@ -700,7 +730,7 @@
 								<li class="item">
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/case-holiday-party-min.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/case-holiday-party-min.jpg" alt="holiday party">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/BvT9SvVD4zVXMSw5A" target="_blank" rel="noopener">2016 Holiday Party</a></strong></h5>
@@ -716,7 +746,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/case-family-picnic-min.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/case-family-picnic-min.jpg" alt="family picnic">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/XvmL1Vp7FEAdjzYL6" target="_blank" rel="noopener">2016 Family Picnic</a></strong></h5>
@@ -735,7 +765,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/aws-trip-min.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/aws-trip-min.jpg" alt="aws reinvent">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/vfdM1cf6bihNDoNcA" target="_blank" rel="noopener">re:Invent 2016</a></strong></h5>
@@ -750,7 +780,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/rogue_one-min.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/rogue_one-min.jpg" alt="star wars rogue one">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/qNT8KHuR7HTLq3tK6" target="_blank" rel="noopener">Rogue One: A Star Wars Movie</a></strong></h5>
@@ -767,7 +797,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/2015-holiday-party-min.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/2015-holiday-party-min.jpg" alt="holiday party">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/AE3Jadpp3fcPvF4o9" target="_blank" rel="noopener">2015 Holiday Party</a></strong></h5>
@@ -782,7 +812,7 @@
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
-											<img class="img-responsive" src="Case/assets/img/starwars-trip-min.jpg" alt="">
+											<img class="img-responsive" src="Case/assets/img/starwars-trip-min.jpg" alt="star wars the force awakens">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/fkL6C2WmdvT9mFpg9" target="_blank" rel="noopener">Star Wars: The Force Awakens</a></strong></h5>
