--- a/src/index.html
+++ b/src/index.html
@@ -637,6 +637,36 @@
 								<li class="item">
 									<div class="col-sm-6">
 										<div class="caption-outer">
+											<img class="img-responsive" src="Case/assets/img/2017holiday_min.jpg" alt="photo from holiday party">
+											<div class="caption text-area-background g-va-middle g-padding-25">
+												<div class="">
+													<h5 class="text-uppercase"><strong><a href="https://photos.app.goo.gl/2U6zL2tz3Lou17ca2" target="_blank" rel="noopener">2017 Holiday Party</a></strong></h5>
+													<p>
+														Employees and loved ones enjoyed a night of bocce, bowling, food, and drinks at Pinstripes in Georgetown.
+													</p>
+												</div>
+											</div>
+										</div>
+									</div>
+									<!-- item -->
+									<div class="col-sm-6">
+										<div class="caption-outer">
+											<img class="img-responsive" src="Case/assets/img/2017reinvent_min.jpg" alt="photo from the AWS re:Invent conference">
+											<div class="caption text-area-background g-va-middle g-padding-25">
+												<div class="">
+													<h5 class="text-uppercase"><strong><a href="https://photos.app.goo.gl/wg2bTokQI4RkM3WA3" target="_blank" rel="noopener">2017 AWS re:Invent</a></strong></h5>
+													<p>
+														This year we had a record number of employees go to AWS re:Invent in Las Vegas!
+													</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+								<!-- item -->
+								<li class="item">
+									<div class="col-sm-6">
+										<div class="caption-outer">
 											<img class="img-responsive" src="Case/assets/img/2017picnic_min.jpg" alt="company picnic">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
