font-upgrade: updated icons

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
 		<link rel="stylesheet" href="assets/css/blocks.css">
 		<link rel="stylesheet" href="assets/css/one.style.css">
 		<!-- CSS Implementing Plugins -->
+		<link rel="stylesheet" href="assets/plugins/font-awesome/css/fontawesome-all.min.css">
 		<link rel="stylesheet" href="assets/plugins/animate.css">
 		<link rel="stylesheet" href="assets/plugins/line-icons/line-icons.css">
-		<link rel="stylesheet" href="assets/plugins/font-awesome/css/fontawesome.min.css">
 		<link rel="stylesheet" href="assets/plugins/sky-forms-pro/skyforms/css/sky-forms.css">
 		<link rel="stylesheet" href="assets/plugins/owl-carousel2/assets/owl.carousel.css">
 		<link rel="stylesheet" href="assets/plugins/master-slider/masterslider/style/masterslider.css">
@@ -200,7 +200,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm-5 content-boxes-v7 boxed"> <i id="benefits-fas" class="fa fa-line-chart pull-left g-theme-text-color-1"></i>
+						<div class="col-sm-5 content-boxes-v7 boxed"> <i id="benefits-fas" class="fas fa-chart-line pull-left g-theme-text-color-1"></i>
 							<div class="content-boxes-in-v7">
 								<h4 class="text-uppercase"><strong>Retirement</strong></h4>
 								<ul class="list-unstyled marked-list-v1">
@@ -218,7 +218,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="col-sm-5 col-sm-offset-1 content-boxes-v7 boxed"> <i id="benefits-fas" class="fa fa-medkit pull-left g-theme-text-color-1"></i>
+						<div class="col-sm-5 col-sm-offset-1 content-boxes-v7 boxed"> <i id="benefits-fas" class="fas fa-medkit pull-left g-theme-text-color-1"></i>
 							<div class="content-boxes-in-v7">
 								<h4 class="text-uppercase"><strong>Health Care</strong></h4>
 								<ul class="list-unstyled marked-list-v1">
@@ -239,7 +239,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm-5 content-boxes-v7 boxed"> <i id="benefits-fas" class="fa fa-laptop pull-left g-theme-text-color-1"></i>
+						<div class="col-sm-5 content-boxes-v7 boxed"> <i id="benefits-fas" class="fas fa-laptop pull-left g-theme-text-color-1"></i>
 							<div class="content-boxes-in-v7">
 								<h4 class="text-uppercase"><strong>Technology Package</strong></h4>
 								<ul class="list-unstyled marked-list-v1">
@@ -253,7 +253,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="col-sm-5 col-sm-offset-1 content-boxes-v7 boxed"> <i id="benefits-fas" class="fa fa-graduation-cap pull-left g-theme-text-color-1"></i>
+						<div class="col-sm-5 col-sm-offset-1 content-boxes-v7 boxed"> <i id="benefits-fas" class="fas fa-graduation-cap pull-left g-theme-text-color-1"></i>
 							<div class="content-boxes-in-v7">
 								<h4 class="text-uppercase"><strong>Professional Development</strong></h4>
 								<ul class="list-unstyled marked-list-v1">
@@ -271,7 +271,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm-5 content-boxes-v7 boxed"> <i id="benefits-fas" class="fa fa-money pull-left g-theme-text-color-1"></i>
+						<div class="col-sm-5 content-boxes-v7 boxed"> <i id="benefits-fas" class="fas fa-money-bill pull-left g-theme-text-color-1"></i>
 							<div class="content-boxes-in-v7">
 								<h4 class="text-uppercase"><strong>Refererals</strong></h4>
 								<ul class="list-unstyled marked-list-v1">
@@ -281,7 +281,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="col-sm-5 col-sm-offset-1 content-boxes-v7 boxed"> <i id="benefits-fas" class="fa fa-calendar pull-left g-theme-text-color-1"></i>
+						<div class="col-sm-5 col-sm-offset-1 content-boxes-v7 boxed"> <i id="benefits-fas" class="fas fa-calendar pull-left g-theme-text-color-1"></i>
 							<div class="content-boxes-in-v7">
 								<h4 class="text-uppercase"><strong>Time off</strong></h4>
 								<ul class="list-unstyled marked-list-v1">
@@ -716,14 +716,14 @@
 										client, so contact us to discuss how we can continue to build a productive
 										relationship and deliver impeccable results for our clients.</p>
 									<ul class="list-unstyled g-fs-12 address-list text-uppercase">
-										<li><i class="fa fa-map-marker g-mr-15"></i><strong>18425 Rustling Woods Court Leesburg, VA 20175</strong></li>
-										<li><i class="fa fa-phone g-mr-15"></i><strong>703-728-0294</strong></li>
-										<li><i class="fa fa-envelope g-mr-15"></i><a href="mailto:info@consultwithcase.com"><strong>info@consultwithcase.com</strong></a></li>
-										<li><i class="fa fa-facebook g-mr-15"></i><a href="https://www.facebook.com/ConsultwithCase/"
+										<li><i class="fas fa-map-marker fa-fw g-mr-15 red-icon"></i><strong>18425 Rustling Woods Court Leesburg, VA 20175</strong></li>
+										<li><i class="fas fa-phone fa-fw g-mr-15 red-icon"></i><strong>703-728-0294</strong></li>
+										<li><i class="fas fa-envelope fa-fw g-mr-15 red-icon"></i><a href="mailto:info@consultwithcase.com"><strong>info@consultwithcase.com</strong></a></li>
+										<li><i class="fab fa-facebook-f fa-fw g-mr-15 red-icon"></i><a href="https://www.facebook.com/ConsultwithCase/"
 											  target="_blank" rel="noopener"><strong>Consult with Case</strong></a></li>
-										<li><i class="fa fa-twitter g-mr-15"></i><a href="https://twitter.com/consultwithcase"
+										<li><i class="fab fa-twitter fa-fw g-mr-15 red-icon"></i><a href="https://twitter.com/consultwithcase"
 											  target="_blank" rel="noopener"><strong>@ConsultWithCase</strong></a></li>
-										<li><i class="fa fa-linkedin g-mr-15"></i><a href="https://www.linkedin.com/company/2558032/"
+										<li><i class="fab fa-linkedin-in fa-fw g-mr-15 red-icon"></i><a href="https://www.linkedin.com/company/2558032/"
 											  target="_blank" rel="noopener"><strong>Case Consulting, Inc.</strong></a></li>
 									</ul>
 								</div>
