--- a/src/index.html
+++ b/src/index.html
@@ -300,140 +300,188 @@
 				<div class="container-fluid">
 					<div class="container g-pt-100 g-pb-30">
 						<div class="g-heading-v9 g-mb-30 text-center">
-							<h2><strong>Careers</strong></h2> </div>
-						<ul class="nav nav-tabs list-unstyled">
-							<li class="active"><a data-toggle="tab" href="#project-manager">Project Manager</a></li>
-							<li><a data-toggle="tab" href="#system-engineer">System Engineer</a></li>
-							<li><a data-toggle="tab" href="#system-integrator">System Integrator</a></li>
-							<li><a data-toggle="tab" href="#developer">Developer</a></li>
-							<li><a data-toggle="tab" href="#system-admin">System Administrator</a></li>
+							<h2><strong>Careers</strong></h2>
+						</div>
+						<ul class="nav nav-tabs list-unstyle equal-height-columns">
+
+									<li class="active"><a data-toggle="tab" href="#project-manager">Project Manager</a></li>
+									<li><a data-toggle="tab" href="#system-engineer">System Engineer</a></li>
+									<li><a data-toggle="tab" href="#system-integrator">System Integrator</a></li>
+									<li><a data-toggle="tab" href="#developer">Developer</a></li>
+									<li><a data-toggle="tab" href="#system-admin">System Administrator</a></li>
+									<li><a data-toggle="tab" href="#internship">Internship</a></li>
 						</ul>
-						<div class="tab-content">
-							<div id="project-manager" class="tab-pane fade in active">
-								<div class="row">
-									<div class="col-md-8 col-md-offset-2">
-										<h3 class="text-uppercase"><strong>Project Manager</strong></h3> </div>
-								</div>
-								<div class="row">
-									<div class="col-md-8 col-md-offset-2">
-										<p> The Project Manager shall work with their Manager and other representatives
-											to achieve the objectives of the project they are assigned to. The Project
-											Manager is responsible for the overall management of the specific project
-											(s) and insuring that the technical solutions and schedules are implemented
-											in a timely manner. The PM is responsible for all aspects of the project
-											including cost schedules, documentation preparation and customer interaction;
-											Ensures that all control gates are met on schedule; Performs organizational
-											wide integration planning and interfaces to other functional systems;
-											ensures that the project team members are fully utilized or are made available
-											to support other projects to meet the requirements. </p>
-									</div>
+
+					<div class="tab-content">
+						<div id="project-manager" class="tab-pane fade in active">
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<h3 class="text-uppercase"><strong>Project Manager</strong></h3>
 								</div>
 							</div>
-							<div id="system-engineer" class="tab-pane fade">
-								<div class="row">
-									<div class="col-md-8 col-md-offset-2">
-										<h3 class="text-uppercase"><strong>System Engineer</strong></h3> </div>
-								</div>
-								<div class="row">
-									<div class="col-md-8 col-md-offset-2">
-										<p> System Engineers provide strategic and tactical planning and engineering
-											support for projects. Personnel are assigned to more complex development
-											tasks based on their Level of expertise. Level 1+ personnel are recognized
-											experts who are assigned to specific high risk or complex projects but
-											are also used to mentor junior personnel and provide ad-hoc support to
-											other projects when needed. Personnel lead engineering activities of teams,
-											are assigned to large complex projects, and support the preparation of
-											cost and schedule estimates. Lead engineering activities for smaller less
-											complex projects and support the preparation of cost and schedule estimates
-											for those types of projects. Support engineering activities and may be
-											responsible for all engineering support for small projects. Responsible
-											for supporting larger projects under the guidance of more experienced
-											System Engineers and may be the engineering resource for simple projects
-											or less complex tasks. This category includes but is not limited to the
-											following roles: Data Architect, Help Desk, Knowledge Management Specialist,
-											Network Engineer, Quality Assurance Manager, Systems Analyst, Systems
-											Architect, Systems Engineer and Technical Consultant. </p>
-									</div>
-								</div>
-							</div>
-							<div id="system-integrator" class="tab-pane fade">
-								<div class="row">
-									<div class="col-md-8 col-md-offset-2">
-										<h3 class="text-uppercase"><strong>System Integrator</strong></h3> </div>
-								</div>
-								<div class="row">
-									<div class="col-md-8 col-md-offset-2">
-										<p> Provides a total systems perspective including a technical understanding
-											of relationships, dependencies and requirements of hardware and software
-											components for a project. Must be knowledgeable in computer systems and
-											gathering/identifying requirements. Must be knowledgeable in life-cycle
-											support, including maintenance, administration, and management. Creates,
-											drafts and/or reviews program documentation, generates formal review documentation,
-											and participates in system and program reviews. Reviews program plans,
-											identifies inconsistencies. Coordinates, supports and participates in
-											program meetings and reviews. Assists in the evaluation of software and
-											associated documentation. Participates in formal and informal reviews
-											to determine quality. Must be able to track project studies, plans, actions
-											items, take minutes, etc. Provides frequent contact with customers, trace
-											ability within program documents, and the overall computing environment
-											and architecture. Manages/updates the master schedule. Ensures coordination
-											and information flow occur between all programs and organizational managers.
-											</p>
-									</div>
-								</div>
-							</div>
-							<div id="developer" class="tab-pane fade">
-								<div class="row">
-									<div class="col-md-8 col-md-offset-2">
-										<h3 class="text-uppercase"><strong>Developer</strong></h3> </div>
-								</div>
-								<div class="row">
-									<div class="col-md-8 col-md-offset-2">
-										<p> Develops, implements and tests software to meet specific project requirements.
-											Personnel are recognized experts who are assigned to specific high risk
-											or complex projects but are also used to mentor junior personnel and provide
-											ad-hoc support to other projects when needed. Lead development activities
-											of teams, are assigned to large complex projects, and support the preparation
-											of cost and schedule estimates. Lead development activities for smaller
-											less complex projects and support the preparation of cost and schedule
-											estimates for those types of projects. Support development activities
-											and may be the developer for small projects. Responsible for development
-											efforts of simple applications to small less complex tasks. </p>
-									</div>
-								</div>
-							</div>
-							<div id="system-admin" class="tab-pane fade">
-								<div class="row">
-									<div class="col-md-8 col-md-offset-2">
-										<h3 class="text-uppercase"><strong>System Administrator</strong></h3> </div>
-								</div>
-								<div class="row">
-									<div class="col-md-8 col-md-offset-2">
-										<p> Coordinates and/or performs the O&amp;M activities for Unix or Windows
-											servers. Develops and documents the full range of SOPs and schedules for
-											O&amp;M activities. Identifies recurring O&amp;M problems and recommends
-											steps to reduce the severity and frequency of the problems. Assists application
-											developers in testing and debugging new programs to ensure compatibility
-											with existing server technologies. Troubleshoots and resolves installation
-											problems; documents procedures for problem resolution. Consults with support
-											teams, help desks, customers, and other technical staff in the resolution
-											of server related problems. Provides first tier support to storage area
-											network and enterprise storage systems. Performs server and storage capacity
-											planning for the most complex and critical systems. Recommends and implements
-											process and tool improvements to improve the efficiency and effectiveness
-											of the organization's change management and configuration management processes
-											and systems. Plans for transition of the development and/or production
-											environment to new technology. Recommends and plans server recapitalization.
-											Performs server performance tuning. Baselines and forecasts server performance
-											data and tunes server hardware and software configurations. Utilizes system
-											software to monitor the performance of system files; manages system data
-											to maintain performance efficiencies. Studies system requirements to determine
-											proper server installation methods and procedures. May provide 24x7 operational
-											support. </p>
-									</div>
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<p>
+										The Project Manager shall work with their Manager and other
+										representatives to achieve the objectives of the project they are assigned
+										to. The Project Manager is responsible for the overall management of the
+										specific project (s) and insuring that the technical solutions and schedules
+										are implemented in a timely manner. The PM is responsible for all aspects
+										of the project including cost schedules, documentation preparation and customer
+										interaction; Ensures that all control gates are met on schedule; Performs
+										organizational wide integration planning and interfaces to other functional
+										systems; ensures that the project team members are fully utilized or are made
+										available to support other projects to meet the requirements.
+									</p>
 								</div>
 							</div>
 						</div>
+
+						<div id="system-engineer" class="tab-pane fade">
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<h3 class="text-uppercase"><strong>System Engineer</strong></h3>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<p>
+										System Engineers provide strategic and tactical planning and
+										engineering support for projects.  Personnel are assigned to more
+										complex development tasks based on their Level of expertise.
+										Level 1+ personnel are recognized experts who are assigned to specific
+										high risk or complex projects but are also used to mentor junior
+										personnel and provide ad-hoc support to other projects when needed.
+										Personnel lead engineering activities of teams, are assigned to large
+										complex projects, and support the preparation of cost and schedule
+										estimates.  Lead engineering activities for smaller less complex
+										projects and support the preparation of cost and schedule estimates
+										for those types of projects.  Support engineering activities and may
+										be responsible for all engineering support for small projects. Responsible
+										for supporting larger projects under the guidance of more experienced
+										System Engineers and may be the engineering resource for simple projects
+										or less complex tasks. This category includes but is not limited to the
+										following roles:   Data Architect, Help Desk, Knowledge Management Specialist,
+										Network Engineer, Quality Assurance Manager, Systems Analyst, Systems Architect,
+										Systems Engineer and Technical Consultant.
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div id="system-integrator" class="tab-pane fade">
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<h3 class="text-uppercase"><strong>System Integrator</strong></h3>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<p>
+										Provides a total systems perspective including a technical
+										understanding of relationships, dependencies and requirements of
+										hardware and software components for a project.  Must be knowledgeable
+										in computer systems and gathering/identifying requirements. Must be
+										knowledgeable in life-cycle support, including maintenance, administration,
+										and management.  Creates, drafts and/or reviews program documentation,
+										generates formal review documentation, and participates in system and
+										program reviews.  Reviews program plans, identifies inconsistencies.
+										Coordinates, supports and participates in program meetings and reviews.
+										Assists in the evaluation of software and associated documentation.
+										Participates in formal and informal reviews to determine quality.
+										Must be able to track project studies, plans, actions items, take minutes,
+										etc.   Provides frequent contact with customers, trace ability within
+										program documents, and the overall computing environment and architecture.
+										Manages/updates the master schedule.  Ensures coordination and information
+										flow occur between all programs and organizational managers.
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div id="developer" class="tab-pane fade">
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<h3 class="text-uppercase"><strong>Developer</strong></h3>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<p>
+										Develops, implements and tests software to meet specific project
+										requirements.  Personnel are recognized experts who are assigned to
+										specific high risk or complex projects but are also used to mentor junior
+										personnel and provide ad-hoc support to other projects when needed.  Lead
+										development activities of teams, are assigned to large complex projects,
+										and support the preparation of cost and schedule estimates.  Lead
+										development activities for smaller less complex projects and support the
+										preparation of cost and schedule estimates for those types of projects.
+										Support development activities and may be the developer for small projects.
+										Responsible for development efforts of simple applications to small less
+										complex tasks.
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div id="system-admin" class="tab-pane fade">
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<h3 class="text-uppercase"><strong>System Administrator</strong></h3>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<p>
+										Coordinates and/or performs the O&amp;M activities for Unix or
+										Windows servers. Develops and documents the full range of SOPs and
+										schedules for O&amp;M activities. Identifies recurring O&amp;M problems and
+										recommends steps to reduce the severity and frequency of the problems.
+										Assists application developers in testing and debugging new programs to
+										ensure compatibility with existing server technologies. Troubleshoots and
+										resolves installation problems; documents procedures for problem resolution.
+										Consults with support teams, help desks, customers, and other technical
+										staff in the resolution of server related problems. Provides first tier
+										support to storage area network and enterprise storage systems. Performs
+										server and storage capacity planning for the most complex and critical
+										systems. Recommends and implements process and tool improvements to improve
+										the efficiency and effectiveness of the organization's change management
+										and configuration management processes and systems. Plans for transition
+										of the development and/or production environment to new technology. Recommends
+										and plans server recapitalization. Performs server performance tuning. Baselines
+										and forecasts server performance data and tunes server hardware and software
+										configurations. Utilizes system software to monitor the performance of system
+										files; manages system data to maintain performance efficiencies. Studies
+										system requirements to determine proper server installation methods and
+										procedures. May provide 24x7 operational support.
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div id="internship" class="tab-pane fade">
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<h3 class="text-uppercase"><strong>Internship</strong></h3>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<p>
+									There's that thance dothe of gruntry from whose this retural country from whips againsolence to sleep:
+									perchance dothe rub; fortune, or will, and lover'd country from who would fard the spurns of discover'd
+									consummatienter what fly take arrows of? Thus pause. To dread of that sleep of somenter in thousand scove, that fly to sleep of that undisprises coil, and that pith may coment man's thus the might, and end make what pith the might, and that is and than fly to be, the pation devoutraveller a  wear
+									</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-12 text-center" >
+									<button class="button-newPage"><h>Read More</h></button>
+									<button class="button-newPage"><h>Apply</h></button>
+								</div>
+							</div>
+						</div>
+					</div>
 					</div>
 				</div>
 			</section>
